
Changes in Version 0.9-51

  o there were errors on startup with some types of plots (e.g. splom()),
    caused by trying to detect data types for time.mode = NA. Now uses try().

  o playwith() failed when given a call with no arguments.

Changes in Version 0.9-50

  o implemented session history: playwith windows load and save history.
    (based on a suggestion from Liviu Andronic). See ?playwith.history

  o row names and covariate values can now be added as labels (right-click).

  o added support for sp package: SpatialPoints and SpatialPointsDataFrame.

  o try as.data.frame() on the first call argument to get covariates.

  o always turn off devAskNewPage, e.g. from demo(), because of redraws.

  o fixed demo("clusterApp"), the parallel() function had stopped working.

  o fixed showGrobsBB() and identifyGrob(), was not working for several
    types of grobs. Note: these will be moved to gridExtra package soon.

Changes in Version 0.9-45

  o fixed mouse click events under Linux - was interpreted as Alt click
    when NumLock was active (thanks to Liviu Andronic and Trey Greer).

  o 'autoplay' detects plots from Rcmdr (thanks to Liviu Andronic).

  o playwith.options("time.mode") now defaults to NA, i.e. automatic.
    Its previous default was FALSE.

  o "grob inspector" etc now pads bounding boxes, so it is possible to
    click on straight lines.

  o eliminated "ignoring non-pairlist attributes" warnings.

  o changed select.list() to the cross-platform menu() in autoplay.

Changes in Version 0.9-44

  o Added a "Stop" action to interrupt plotting.

  o Added 'preplot.actions' argument to playwith().

  o A custom 'handler' function can be specified for 'parameters' widgets.

  o Improved demo("clusterApp").

  o Brushing a single data point (line) in a parallel plot now works.

  o "Select from table" to identify points now works in more cases.

  o New function identifyGrob(), returns names of clicked grid-objects.

Changes in Version 0.9-43
